--- a/Applications/Hybrid Quantum Neural Networks.ipynb
+++ b/Applications/Hybrid Quantum Neural Networks.ipynb
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1021,6 +1021,458 @@
       "Epoch 273/500 Training done.\n",
       "Testing done.\n",
       "Epoch 274/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 275/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 276/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 277/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 278/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 279/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 280/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 281/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 282/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 283/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 284/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 285/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 286/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 287/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 288/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 289/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 290/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 291/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 292/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 293/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 294/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 295/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 296/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 297/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 298/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 299/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 300/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 301/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 302/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 303/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 304/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 305/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 306/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 307/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 308/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 309/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 310/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 311/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 312/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 313/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 314/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 315/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 316/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 317/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 318/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 319/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 320/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 321/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 322/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 323/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 324/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 325/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 326/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 327/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 328/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 329/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 330/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 331/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 332/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 333/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 334/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 335/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 336/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 337/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 338/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 339/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 340/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 341/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 342/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 343/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 344/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 345/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 346/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 347/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 348/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 349/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 350/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 351/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 352/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 353/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 354/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 355/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 356/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 357/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 358/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 359/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 360/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 361/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 362/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 363/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 364/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 365/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 366/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 367/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 368/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 369/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 370/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 371/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 372/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 373/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 374/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 375/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 376/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 377/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 378/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 379/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 380/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 381/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 382/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 383/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 384/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 385/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 386/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 387/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 388/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 389/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 390/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 391/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 392/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 393/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 394/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 395/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 396/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 397/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 398/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 399/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 400/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 401/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 402/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 403/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 404/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 405/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 406/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 407/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 408/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 409/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 410/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 411/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 412/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 413/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 414/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 415/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 416/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 417/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 418/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 419/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 420/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 421/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 422/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 423/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 424/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 425/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 426/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 427/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 428/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 429/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 430/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 431/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 432/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 433/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 434/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 435/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 436/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 437/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 438/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 439/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 440/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 441/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 442/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 443/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 444/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 445/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 446/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 447/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 448/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 449/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 450/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 451/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 452/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 453/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 454/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 455/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 456/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 457/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 458/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 459/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 460/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 461/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 462/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 463/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 464/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 465/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 466/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 467/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 468/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 469/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 470/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 471/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 472/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 473/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 474/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 475/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 476/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 477/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 478/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 479/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 480/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 481/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 482/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 483/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 484/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 485/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 486/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 487/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 488/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 489/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 490/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 491/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 492/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 493/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 494/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 495/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 496/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 497/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 498/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 499/500 Training done.\n",
+      "Testing done.\n",
+      "Epoch 500/500 Training done.\n",
       "Testing done.\n"
      ]
     }
@@ -1039,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1048,7 +1500,7 @@
        "'from torch.utils.tensorboard import SummaryWriter\\n\\n# Initialize TensorBoard writer\\nwriter = SummaryWriter(log_dir=\"./runs/hybrid_qnn_training\")\\n\\n# Existing code\\nhybrid_model = Hybrid_QNN().to(device)\\n\\noptimizer = optim.Adadelta(hybrid_model.parameters(),\\n                           lr=0.001,\\n                           weight_decay=0.8)\\n\\nloss_function = nn.BCELoss().to(device)\\n\\ntraining_cost = []\\ntesting_cost = []\\ntraining_accuracy = []\\ntesting_accuracy = []\\n\\nhybrid_model.train()\\n\\n\\nimport time\\nfor epoch in range(epochs):\\n\\n    train_start_time = time.time()\\n\\n    optimizer.zero_grad()\\n\\n    y_hat_train = hybrid_model(x_train).to(device)\\n\\n    train_cost = loss_function(y_hat_train, y_train).to(device)\\n\\n    train_cost.backward()\\n\\n    optimizer.step()\\n\\n    training_accuracy.append(accuracy_score(y_train, y_hat_train))\\n    training_cost.append(train_cost.item())\\n\\n    train_elapsed_time = time.time() - train_start_time\\n    writer.add_scalar(\"Time/Train\", train_elapsed_time, epoch + 1)\\n\\n    writer.add_scalar(\"Loss/Train\", train_cost.item(), epoch + 1)\\n    writer.add_scalar(\"Accuracy/Train\", training_accuracy[-1], epoch + 1)\\n\\n    eval_start_time = time.time()\\n\\n    hybrid_model.eval()\\n    with torch.no_grad():\\n\\n        y_hat_test = hybrid_model(x_test).to(device)\\n\\n        test_cost = loss_function(y_hat_test, y_test).to(device)\\n\\n        testing_accuracy.append(accuracy_score(y_test, y_hat_test))\\n        testing_cost.append(test_cost.item())\\n\\n\\n        # Log testing metrics to TensorBoard\\n        writer.add_scalar(\"Loss/Test\", test_cost.item(), epoch + 1)\\n        writer.add_scalar(\"Accuracy/Test\", testing_accuracy[-1], epoch + 1)\\n\\n# Close TensorBoard writer\\nwriter.close()'"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1123,7 +1575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1135,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
