Refactor Hybrid Quantum Neural Networks notebook to reset execution count and clean up code

--- a/Hybrid Quantum Neural Networks/Hybrid Quantum Neural Networks.ipynb
+++ b/Hybrid Quantum Neural Networks/Hybrid Quantum Neural Networks.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,9 +341,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "class HybridTrainer:\n",
     "    def __init__(self, model, optimizer, loss_function, writer, device):\n",
     "        \"\"\"\n",
@@ -401,6 +398,7 @@
     "        # Log training metrics to TensorBoard\n",
     "        self.writer.add_scalar(\"Loss/Train\", train_cost.item(), epoch + 1)\n",
     "        self.writer.add_scalar(\"Accuracy/Train\", accuracy, epoch + 1)\n",
+    "\n",
     "    def test(self, x_test, y_test, epoch):\n",
     "        \"\"\"\n",
     "        Runs one evaluation step and logs metrics.\n",
@@ -468,13 +466,7 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/500 Training done.\n",
-      "Testing done.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Testing done.\n",
       "Epoch 2/500 Training done.\n",
       "Testing done.\n",
       "Epoch 3/500 Training done.\n",
